# enventor

./: .arcconfig  .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  Makefile_Eolian_Helper.am  NEWS  README  README.md  build.sh  configure.ac  meson.build  meson_options.txt
data/: Makefile.am
data/.proto/: Makefile.am  proto.edc  proto.edj
data/about/: ABOUT  COMMAND  DEVEL  HISTORY  INTRO  Makefile.am
data/autocomp/: Makefile.am  autocomp.src  meson.build
data/color/: Makefile.am  color.src  edc.src  meson.build
data/desktop/: Makefile.am  enventor.desktop  meson.build
data/edc/: .theme_ext.edc.swp  content.edc  enventor.edc  layout.edc  menu.edc  theme_ext.edc
data/help/: DEVEL  HISTORY  INTRO  Makefile.am  SHORTCUT  meson.build
data/icon/: Makefile.am  meson.build
data/images/: Makefile.am  meson.build
data/reference/: Makefile.am  meson.build  reference.src
data/sample/: Makefile.am  etypers.edj  sample.edc  sample.edj
data/sounds/: Makefile.am  meson.build
data/syntax/: Makefile.am  color_syntax.src
data/templates/: Basic.edc  BgAnimation.edc  Button.edc  Clip.edc  CustomButton.edc  Empty.edc  GameStage.edc  Group.edc  Interpolation.edc  Listitem.edc  Makefile.am  Map.edc  Mask.edc  MobileLayout.edc  Morphing.edc  MouseEvent.edc  Proxy.edc  Rect.edc  Sound.edc  Spacer.edc  Text.edc  Textblock.edc  Tween.edc  Vector.edc  Watchface.edc  Watchface2.edc  basic.edc  clip.edc  empty.edc  group.edc  image.edc  map.edc  meson.build  minimum.edc  proxy.edc  rect.edc  rotation+zoom.edc  sound.edc  spacer.edc  text.edc  (+4 more)
data/theme/: Makefile.am  images.edc
data/theme/images/: Makefile.am
data/themes/: Makefile.am  content.edc  layout.edc  menu.edc  theme_ext.edc
data/themes/dark/: .Makefile.am.swp  .menu.edc.swp  Makefile.am  content.edc  enventor_dark.edc  layout.edc  menu.edc  theme_ext.edc
data/themes/default/: Makefile.am  content.edc  enventor.edc  file_browser.edc  images.edc  layout.edc  layout_common.edc  layout_setting.edc  live_edit.edc  menu.edc  meson.build  theme_ext.edc
data/themes/default/images/: Makefile.am
data/themes/default/sounds/: Makefile.am
include/: common.h  config_data.h  ctxpopup.h  dummy_obj.h  edc_editor.h  edc_viewer.h  fake_obj.h  menu.h  syntax_color.h
m4/: efl_beta.m4  efl_eo.m4
pc/: enventor.pc.in  meson.build
po/: LINGUAS  Makevars  POTFILES.in  en.po  enventor.pot  fr.po  it.po  meson.build  ru.po  sl.po
src/: Makefile.am  config_data.c  dummy_obj.c  edc_editor.c  edc_parser.c  edc_viewer.c  edj_viewer.c  fake_obj.c  main.c  menu.c  panes.c  statusbar.c  syntax_color.c
src/include/: Makefile.am  about.h  auto_comp.h  auto_comp_code.h  base_gui.h  build.h  build_setting.h  common.h  config_data.h  console.h  ctxpopup.h  dummy_obj.h  edc_editor.h  edc_navigator.h  edc_parser.h  edj_mgr.h  edj_viewer.h  file_browser.h  file_mgr.h  file_tab.h  globals.h  goto.h  help.h  hotkeys.h  indent.h  live_edit.h  main.h  menu.h  newfile.h  panes.h  preference_setting.h  redoundo.h  search.h  setting.h  statusbar.h  syntax_color.h  syntax_helper.h  template.h  template_code.h  text_setting.h  (+2 more)
src/lib/: Enventor.h  Enventor.h.in  Enventor_Eo.h  Enventor_Legacy.h  Makefile.am  auto_comp.c  auto_comp_code.h  build.c  ctxpopup.c  dummy_obj.c  edc_editor.c  edc_parser.c  edj_mgr.c  edj_viewer.c  enventor_main.c  enventor_object.eo  enventor_private.h  enventor_smart.c  indent.c  meson.build  outline_obj.c  redoundo.c  reference.c  syntax_color.c  syntax_helper.c  syntax_indent.c  template.c  template_code.h  util.c  wireframes_obj.c
