MAINTAINERCLEANFILES = Makefile.in

filesdir = $(datadir)/$(PACKAGE)/images
files_DATA = ENVENTOR_EMBEDDED_IMAGE.png \
             ENVENTOR_EMBEDDED_TRIAB-01.png \
             ENVENTOR_EMBEDDED_TRIAB-02.png \
             ENVENTOR_EMBEDDED_TRIAB-03.png \
             ENVENTOR_EMBEDDED_TRIAB-04.png \
             ENVENTOR_EMBEDDED_TRIAB-05.png \
             ENVENTOR_EMBEDDED_TRIAB-06.png \
             ENVENTOR_EMBEDDED_TRIAB-07.png \
             ENVENTOR_EMBEDDED_TRIAB-08.png \
             ENVENTOR_EMBEDDED_TRIAB-09.png \
             ENVENTOR_EMBEDDED_TRIAB-10.png \
             ENVENTOR_EMBEDDED_TRIAB-11.png \
             ENVENTOR_EMBEDDED_TRIAB-12.png \
				 enventor_logo.png

EXTRA_DIST = $(files_DATA)
