MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = common.h \
	base_gui.h \
	config_data.h \
	dummy_obj.h \
	edc_editor.h \
	edc_parser.h \
	edj_viewer.h \
	menu.h \
	panes.h \
	statusbar.h \
	edj_mgr.h \
	syntax_color.h \
	build.h \
	ctxpopup.h \
	globals.h \
	indent.h \
	syntax_helper.h \
	template_code.h \
	tools.h \
	newfile.h \
    auto_comp.h \
	auto_comp_code.h \
	search.h
