MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = common.h \
	base_gui.h \
	config_data.h \
	menu.h \
	panes.h \
	statusbar.h \
	tools.h \
	newfile.h \
	goto.h \
	setting.h \
	text_setting.h \
	search.h \
	live_edit.h \
	console.h \
	file_mgr.h \
	edc_navigator.h \
	file_browser.h \
	build_setting.h \
	preference_setting.h \
	help.h \
	utils.h \
	file_tab.h
