MAINTAINERCLEANFILES = Makefile.in

EXTRA_DIST = arrow_down.png \
	arrow_left.png \
	arrow_right.png \
	arrow_up.png \
	bt_base1.png \
	bt_base2.png \
	bt_dis_base.png \
	bt_dis_hilight.png \
	bt_glow.png \
	bt_hilight.png \
	bt_shine.png \
	bt_sm_base2.png \
	bt_sm_hilight.png \
	bt_sm_shine.png \
	content_glow.png \
	cur_box.png \
	cur_glow.png \
	cur_hi.png \
	cur_shad.png \
	cur_shine.png \
	folder.png \
	menu_layout.png \
	minus.png \
	part_highlight.png \
	plus.png \
	preference.png \
	sb_runnerh.png \
	sb_runnerv.png \
	shelf_inset.png \
	sl_bt2_2.png \
	swallow.png \
	warning.png
