MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
   bevel_in.png \
   bevel_out.png \
   bg_glow_in.png \
   bt_base1.png \
   bt_base2.png \
   bt_dis_base.png \
   bt_dis_hilight.png \
   bt_glow.png \
   bt_hilight.png \
   bt_shine.png \
   bub_over_bot.png \
   fileselect.png \
   folder.png \
   glow_small.png \
   holes_tiny_glow_horiz.png \
   holes_tiny_glow_vert.png \
   holes_tiny_horiz.png \
   holes_tiny_vert.png \
   inset_shadow.png \
   logo.png \
   frame_bg.png \
   minus.png \
   part_highlight.png \
   plus.png \
   preference.png \
   runner_glow_horiz.png \
   runner_glow_vert.png \
   runner_horiz.png \
   runner_vert.png \
   shadow_square_tiny.png \
   shine.png \
   swallow.png \
   sym_down_glow_normal.png \
   sym_down_light_normal.png \
   sym_left_glow_normal.png \
   sym_left_light_normal.png \
   sym_right_glow_normal.png \
   sym_right_light_normal.png \
   sym_up_glow_normal.png \
   sym_up_light_normal.png \
   vgrad_med_lighter.png \
   warning.png \
   pm_fill.png \
   menu.png \
   find.png \
   highlight.png \
   lines.png \
   setting_icon.png \
   console.png \
   status.png \
   swallow_s.png \
   goto.png \
   downlight_glow_left.png \
   downlight_glow_right.png \
   alarm_highlight.png \
   disabler.png \
   live_bg_glow_in.png \
   live_rel1_dragable.png \
   live_rel2_dragable.png \
   live_image.png \
   live_rectangle.png \
   live_swallow.png \
   live_spacer.png \
   live_text.png \
   live_textblock.png \
   live_edit.png
