MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
   bevel_in.png \
   bevel_out.png \
   bg_glow_in.png \
   bt_base1.png \
   bt_base2.png \
   bt_dis_base.png \
   bt_dis_hilight.png \
   bt_glow.png \
   bt_hilight.png \
   bt_shine.png \
   bub_over_bot.png \
   folder.png \
   glow_small.png \
   holes_tiny_glow_horiz.png \
   holes_tiny_glow_vert.png \
   holes_tiny_horiz.png \
   holes_tiny_vert.png \
   inset_shadow.png \
   logo.png \
   full_logo.png \
   frame_bg.png \
   part_highlight.png \
   runner_glow_horiz.png \
   runner_glow_vert.png \
   runner_horiz.png \
   runner_vert.png \
   shadow_square_tiny.png \
   shine.png \
   swallow.png \
   sym_down_glow_normal.png \
   sym_down_light_normal.png \
   sym_left_glow_normal.png \
   sym_left_light_normal.png \
   sym_right_glow_normal.png \
   sym_right_light_normal.png \
   sym_up_glow_normal.png \
   sym_up_light_normal.png \
   vgrad_med_lighter.png \
   warning.png \
   menu.png \
   find.png \
   highlight.png \
   lines.png \
   setting_icon.png \
   console.png \
   status.png \
   dummy.png \
   mirror.png \
   goto.png \
   downlight_glow_left.png \
   downlight_glow_right.png \
   disabler.png \
   live_image.png \
   live_rectangle.png \
   live_swallow.png \
   live_spacer.png \
   live_spacer_icon.png \
   live_text.png \
   live_textblock.png \
   new.png \
   slider_up.png \
   slider_down.png \
   save.png \
   redo.png \
   undo.png \
   white_bar_vert_glow.png \
   horizontal_separated_bar_small_glow.png \
   expand.png \
   invert.png \
   icon_close.png \
   icon_file.png \
   icon_folder.png \
   icon_search.png \
   file_browser.png \
   edc_navigator.png \
   cursor_arrow.png \
   navi_group.png \
   navi_image.png \
   navi_rect.png \
   navi_swallow.png \
   navi_text.png \
   navi_textblock.png \
   navi_spacer.png \
   navi_unknown.png \
   navi_state.png \
   navi_program.png \
   navi_play.png \
   navi_stop.png \
   bg_demo.png \
   refresh.png \
   brows_logo.png \
   brows_image.png \
   brows_sound.png \
   brows_font.png \
   template.png
